Some bugs fixed & optimized for posting a final decision.